[Em, St, Sa] Added image edit pipeline

--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -8,7 +8,7 @@
     "# Image Stereoscopic Reconstruction (Pipeline)\n",
     "\n",
     "In this notebook, we explore the process of image translation, in order to obtain a frontal view of an architectural object from the corresponding lateral view, with possible image enhancements (inclusion of new details, inpainting, etc.).\n",
-    "To achieve this, we are going to use an attention based, Chain of Thoughts (CoT) driven generative process, which includes an LLM coupled with a Conditional Latent Diffusion Model (in our example, we are using Omnigen)."
+    "To achieve this, we are going to use an attention based, Chain of Thoughts (CoT) driven generative process, which includes an LLM coupled with a Conditional Latent Diffusion Model (in our example, we are using Qwen 2.5 Image Edit)."
    ]
   },
   {
@@ -39,10 +39,9 @@
     "import base64\n",
     "import io\n",
     "import json\n",
-    "import matplotlib\n",
-    "import matplotlib.image as mpimg\n",
     "import ollama\n",
     "import chromadb\n",
+    "from matplotlib import image as mpimg\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -181,7 +180,220 @@
    "id": "fefb9ad8",
    "metadata": {},
    "source": [
-    "## Phase 1: Prospective Change"
+    "## Phase 1: Prospective Change\n",
+    "\n",
+    "To solve this purpose, we make use of Qwen 2.5 Image Edit, an **instructive** T2I model capable of image generation, image editing and in-context image editing, over a CoT-LLM infrastructure."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05737bc6",
+   "metadata": {},
+   "source": [
+    "### Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac8ace62",
+   "metadata": {},
+   "source": [
+    "Cloning from public [Qwen Huggingface repo](https://huggingface.co/Qwen/Qwen-Image-Edit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "847a4fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://huggingface.co/spaces/Qwen/Qwen-Image-Edit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a059862c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install git+https://github.com/huggingface/diffusers\n",
+    "%pip install -r Qwen-Image-Edit/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61ac68c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from PIL import Image\n",
+    "import torch\n",
+    "from diffusers import QwenImageEditPipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67f73d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = QwenImageEditPipeline.from_pretrained(\"Qwen/Qwen-Image-Edit\")\n",
+    "print(\"Pipeline loaded.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb372c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.to(torch.bfloat16) # Inference in mixed precision (raccomended for faster inference)\n",
+    "pipeline.to(\"cuda\")         # Change to \"cpu\" if CUDA is not supported by your machine. The inference will be slower.\n",
+    "pipeline.set_progress_bar_config(disable=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8448744e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_image(inputs):\n",
+    "    with torch.inference_mode():\n",
+    "        output = pipeline(**inputs)\n",
+    "        output_image = output.images[0]\n",
+    "        output_image.save(\"output_edit.jpeg\")\n",
+    "        print(\"Image generated (saved!)\")\n",
+    "    return output_image\n",
+    "\n",
+    "def make_inputs(image: Image, prompt: str, neg_prompt = \" \"):\n",
+    "    return {\n",
+    "    \"image\": image,\n",
+    "    \"prompt\": prompt,\n",
+    "    \"generator\": torch.manual_seed(0),\n",
+    "    \"true_cfg_scale\": 4.0,\n",
+    "    \"negative_prompt\": neg_prompt,\n",
+    "    \"num_inference_steps\": 50,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec96e643",
+   "metadata": {},
+   "source": [
+    "### Inference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f91856cd",
+   "metadata": {},
+   "source": [
+    "#### Solid Rotation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e44a8b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = Image.open(\"./.jpeg\").convert(\"RGB\")\n",
+    "prompt = \"Make the main subject appear in front view.\"\n",
+    "inputs = make_inputs(image, prompt)\n",
+    "output_image = generate_image(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b37000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a62de4e5",
+   "metadata": {},
+   "source": [
+    "### Further improvements\n",
+    "\n",
+    "These operations aim to edit the previous image in order to have better quality images, but are not strictly necessary.\n",
+    "You can skip these steps if you wish."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ffb9b2",
+   "metadata": {},
+   "source": [
+    "#### Colorization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aa1fb96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = Image.open(\"./output_edit.jpeg\").convert(\"RGB\")\n",
+    "prompt = \"Colorize the image.\"\n",
+    "inputs = make_inputs(image, prompt)\n",
+    "output_image = generate_image(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e373298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e0ccf96",
+   "metadata": {},
+   "source": [
+    "#### Resolution Upscaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f665509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = Image.open(\"./output_edit.jpeg\").convert(\"RGB\")\n",
+    "prompt = \"Enhance the resolution of the image.\"\n",
+    "inputs = make_inputs(image, prompt)\n",
+    "output_image = generate_image(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29209a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_image"
    ]
   },
   {
