[Em, St, Sa] test: migliorati esperimenti I2I e Image Inpainting

--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://huggingface.co/spaces/Qwen/Qwen-Image-Edit"
+    "!git clone https://github.com/QwenLM/Qwen-Image.git ./models/"
    ]
   },
   {
@@ -218,8 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install git+https://github.com/huggingface/diffusers\n",
-    "%pip install -r Qwen-Image-Edit/requirements.txt"
+    "%pip install git+https://github.com/huggingface/diffusers"
    ]
   },
   {
@@ -232,7 +231,10 @@
     "import os\n",
     "from PIL import Image\n",
     "import torch\n",
-    "from diffusers import QwenImageEditPipeline"
+    "from diffusers import QwenImageEditPlusPipeline\n",
+    "from typing import List, Dict\n",
+    "from io import BytesIO\n",
+    "from ollama import chat, ChatResponse"
    ]
   },
   {
@@ -242,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline = QwenImageEditPipeline.from_pretrained(\"Qwen/Qwen-Image-Edit\")\n",
+    "pipeline = QwenImageEditPlusPipeline.from_pretrained(\"Qwen/Qwen-Image-2509\")\n",
     "print(\"Pipeline loaded.\")"
    ]
   },
@@ -265,23 +267,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_image(inputs):\n",
+    "def generate_image(inputs: Dict[Image.Image, str, torch.Generator, float, str, int, int], output_filename = \"output_edit\"):\n",
     "    with torch.inference_mode():\n",
     "        output = pipeline(**inputs)\n",
-    "        output_image = output.images[0]\n",
-    "        output_image.save(\"output_edit.jpeg\")\n",
+    "        i = 0\n",
+    "        for output_image in output.images:\n",
+    "            output_image.save(f\"{output_filename}_{i}.jpeg\")\n",
+    "            i += 1\n",
     "        print(\"Image generated (saved!)\")\n",
     "    return output_image\n",
     "\n",
-    "def make_inputs(image: Image, prompt: str, neg_prompt = \" \"):\n",
+    "def make_inputs(images: List[Image.Image], prompt: str, guidance = 4.0, neg_prompt = \" \", inf_steps = 50, gen_images = 1):\n",
     "    return {\n",
-    "    \"image\": image,\n",
+    "    \"image\": images,\n",
     "    \"prompt\": prompt,\n",
     "    \"generator\": torch.manual_seed(0),\n",
-    "    \"true_cfg_scale\": 4.0,\n",
+    "    \"true_cfg_scale\": guidance,\n",
     "    \"negative_prompt\": neg_prompt,\n",
-    "    \"num_inference_steps\": 50,\n",
-    "    }"
+    "    \"num_inference_steps\": inf_steps,\n",
+    "    \"num_images_per_prompt\": gen_images\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "169226eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def polish_prompt_en(original_prompt: str, images: List[Image.Image]):\n",
+    "    base64_images = []\n",
+    "    for image in images:\n",
+    "        with BytesIO() as buffered:\n",
+    "            image.save(buffered, format=\"JPEG\")\n",
+    "            base64_images.append(base64.b64encode(buffered.getvalue()).decode(\"utf8\"))\n",
+    "    response: ChatResponse = chat(model=MODEL, messages=[\n",
+    "    {\n",
+    "        'role': 'user',\n",
+    "        'content':  f'''\n",
+    "        # Edit Instruction Rewriter\n",
+    "        You are a professional edit instruction rewriter. Your task is to generate a precise, concise, and visually achievable professional-level edit instruction based on the user-provided instruction and the image to be edited.  \n",
+    "\n",
+    "        Please strictly follow the rewriting rules below:\n",
+    "\n",
+    "        ## 1. General Principles\n",
+    "        - Keep the rewritten prompt **concise**. Avoid overly long sentences and reduce unnecessary descriptive language.  \n",
+    "        - If the instruction is contradictory, vague, or unachievable, prioritize reasonable inference and correction, and supplement details when necessary.  \n",
+    "        - Keep the core intention of the original instruction unchanged, only enhancing its clarity, rationality, and visual feasibility.  \n",
+    "        - All added objects or modifications must align with the logic and style of the edited input image’s overall scene.  \n",
+    "\n",
+    "        ## 2. Task Type Handling Rules\n",
+    "        ### 1. Add, Delete, Replace Tasks\n",
+    "        - If the instruction is clear (already includes task type, target entity, position, quantity, attributes), preserve the original intent and only refine the grammar.  \n",
+    "        - If the description is vague, supplement with minimal but sufficient details (category, color, size, orientation, position, etc.). For example:  \n",
+    "            > Original: \"Add an animal\"  \n",
+    "            > Rewritten: \"Add a light-gray cat in the bottom-right corner, sitting and facing the camera\"  \n",
+    "        - Remove meaningless instructions: e.g., \"Add 0 objects\" should be ignored or flagged as invalid.  \n",
+    "        - For replacement tasks, specify \"Replace Y with X\" and briefly describe the key visual features of X.  \n",
+    "\n",
+    "        ### 2. Text Editing Tasks\n",
+    "        - All text content must be enclosed in English double quotes `\" \"`. Do not translate or alter the original language of the text, and do not change the capitalization.  \n",
+    "        - **For text replacement tasks, always use the fixed template:**\n",
+    "            - `Replace \"xx\" to \"yy\"`.  \n",
+    "            - `Replace the xx bounding box to \"yy\"`.  \n",
+    "        - If the user does not specify text content, infer and add concise text based on the instruction and the input image’s context. For example:  \n",
+    "            > Original: \"Add a line of text\" (poster)  \n",
+    "            > Rewritten: \"Add text \\\"LIMITED EDITION\\\" at the top center with slight shadow\"  \n",
+    "        - Specify text position, color, and layout in a concise way.  \n",
+    "\n",
+    "        ### 3. Human Editing Tasks\n",
+    "        - Maintain the person’s core visual consistency (ethnicity, gender, age, hairstyle, expression, outfit, etc.).  \n",
+    "        - If modifying appearance (e.g., clothes, hairstyle), ensure the new element is consistent with the original style.  \n",
+    "        - **For expression changes, they must be natural and subtle, never exaggerated.**  \n",
+    "        - If deletion is not specifically emphasized, the most important subject in the original image (e.g., a person, an animal) should be preserved.\n",
+    "            - For background change tasks, emphasize maintaining subject consistency at first.  \n",
+    "        - Example:  \n",
+    "            > Original: \"Change the person’s hat\"  \n",
+    "            > Rewritten: \"Replace the man’s hat with a dark brown beret; keep smile, short hair, and gray jacket unchanged\"  \n",
+    "\n",
+    "        ### 4. Style Transformation or Enhancement Tasks\n",
+    "        - If a style is specified, describe it concisely with key visual traits. For example:  \n",
+    "            > Original: \"Disco style\"  \n",
+    "            > Rewritten: \"1970s disco: flashing lights, disco ball, mirrored walls, colorful tones\"  \n",
+    "        - If the instruction says \"use reference style\" or \"keep current style,\" analyze the input image, extract main features (color, composition, texture, lighting, art style), and integrate them into the prompt.  \n",
+    "        - **For coloring tasks, including restoring old photos, always use the fixed template:** \"Restore old photograph, remove scratches, reduce noise, enhance details, high resolution, realistic, natural skin tones, clear facial features, no distortion, vintage photo restoration\"  \n",
+    "        - If there are other changes, place the style description at the end.\n",
+    "\n",
+    "        ## 3. Rationality and Logic Checks\n",
+    "        - Resolve contradictory instructions: e.g., \"Remove all trees but keep all trees\" should be logically corrected.  \n",
+    "        - Add missing key information: if position is unspecified, choose a reasonable area based on composition (near subject, empty space, center/edges).  \n",
+    "\n",
+    "        # Output Format Example\n",
+    "        \"211 floors high skyscrape, majesticly dominating the crowded street below...\"\n",
+    "\n",
+    "        Prompt to be rewritten: {original_prompt}\n",
+    "        ''',\n",
+    "        \"images\": base64_images\n",
+    "    }\n",
+    "    ])\n",
+    "    return response['message']['content']"
    ]
   },
   {
@@ -301,15 +386,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f50fa1c6",
+   "metadata": {},
+   "source": [
+    "We take a ROI of the image beforehand, including just the monument for better results for the rotation task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58371a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_full = Image.open(\"assets/eustachian_monument.jpeg\").convert(\"RGB\")\n",
+    "image_roi = image_full.crop((200, 500, 800, 1100))\n",
+    "image_roi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3e44a8b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = Image.open(\"./.jpeg\").convert(\"RGB\")\n",
-    "prompt = \"Make the main subject appear in front view.\"\n",
-    "inputs = make_inputs(image, prompt)\n",
+    "images = [image_full]\n",
+    "prompt = polish_prompt_en(\"Rotate the main subject, so it looks in front view.\", images)\n",
+    "inputs = make_inputs(images, prompt)\n",
     "output_image = generate_image(inputs)"
    ]
   },
@@ -321,6 +426,22 @@
    "outputs": [],
    "source": [
     "output_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc837642",
+   "metadata": {},
+   "source": [
+    "## Phase 2: Inpainting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b5d9473",
+   "metadata": {},
+   "source": [
+    "## Final Result"
    ]
   },
   {
@@ -364,64 +485,25 @@
    "source": [
     "output_image"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5e0ccf96",
-   "metadata": {},
-   "source": [
-    "#### Resolution Upscaling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f665509",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = Image.open(\"./output_edit.jpeg\").convert(\"RGB\")\n",
-    "prompt = \"Enhance the resolution of the image.\"\n",
-    "inputs = make_inputs(image, prompt)\n",
-    "output_image = generate_image(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29209a8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_image"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc837642",
-   "metadata": {},
-   "source": [
-    "## Phase 2: Image RAG"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b5d9473",
-   "metadata": {},
-   "source": [
-    "## Final Result"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "eustachian_monument",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
