[Em, Sa, St] feat: Allineata pipeline di demo

--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -73,6 +73,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33296f36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "a608590f",
    "metadata": {},
@@ -415,7 +423,7 @@
     "images = [image_full]\n",
     "prompt = polish_prompt_en(\"Rotate the main subject, so it looks in front view.\", images)\n",
     "inputs = make_inputs(images, prompt)\n",
-    "output_image = generate_image(inputs)"
+    "rotated = generate_image(inputs, 'examples/rotated')"
    ]
   },
   {
@@ -425,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_image"
+    "rotated"
    ]
   },
   {
@@ -433,7 +441,150 @@
    "id": "cc837642",
    "metadata": {},
    "source": [
-    "## Phase 2: Inpainting"
+    "## Phase 2: Inpainting\n",
+    "\n",
+    "In this phase we make use of negative prompt, due to the overall high complexity and need for stability in fulfilling the task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "383cc3b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if rotated is None:\n",
+    "    rotated = Image.open(\"examples/rotated_0.jpeg\")\n",
+    "rotated_roi = rotated.crop((350, 350, 690, 800))\n",
+    "rotated_roi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88de530c",
+   "metadata": {},
+   "source": [
+    "#### Generation of a known concept\n",
+    "\n",
+    "This cell goes through the generation of an iconography of Holy Mary, showcasing how a very spread concept can be successfully reproduced by the LDM in a detailed matter, without the need for Image RAG."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a893304e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = [rotated_roi]\n",
+    "prompt = polish_prompt_en(\"\"\"Put a little statue of Holy Mary\n",
+    "                           standing and holding a blessing Baby Jesus, inside the central niche. Be sure to match proportions.\n",
+    "                          **Be sure to put Holy Mary below the little arc.**\n",
+    "                          Leave the background untouched.\n",
+    "                          Keep the features of both Holy Mary and Baby Jesus' faces well defined.\n",
+    "                          Make the image black and white.\"\"\", images)\n",
+    "neg_prompt = polish_prompt_en(\"Do not enlarge nor shrink the niche. Scale the size of Holy Mary instead. Do not put Holy Mary below the big arc\", images)\n",
+    "print(prompt, neg_prompt, sep=\"\\n\")\n",
+    "inputs = make_inputs(images, prompt, neg_prompt=neg_prompt)\n",
+    "output_image = generate_image(inputs, \"examples/inpaint_holymary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd900051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f43cf984",
+   "metadata": {},
+   "source": [
+    "#### Image RAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "042a9b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = [Image.open(\"examples/inpaint_holymary_0.jpeg\"), Image.open(\"assets/stEustace.jpg\")]\n",
+    "prompt = polish_prompt_en('''Add a statue of saint Eustace to the right of the central niche, using the image of the saint as a reference.\n",
+    "                           Match the style of the image.\n",
+    "                           Leave the central niche untouched. Keep face features well defined. Make the image black and white''', images)\n",
+    "neg_prompt = polish_prompt_en(\"Do not enlarge nor shrink the niche. Do not edit the background. Do not crop the image. Do not make the statue too big or too small.\", images)\n",
+    "inputs = make_inputs(images, prompt)\n",
+    "output_image = generate_image(inputs, f\"examples/inpaint_eustace\")\n",
+    "output_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcde5aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = [output_image, Image.open(\"assets/stVitus.jpeg\")]\n",
+    "prompt = polish_prompt_en('''Add a statue of saint Vitus to the left of the central niche, using the image of the saint as a reference. \n",
+    "                           Match the image style.\n",
+    "                           Be sure to match proportions.\n",
+    "                           Leave the central niche untouched.\n",
+    "                           Keep face features well defined. Make the image black and white''', images)\n",
+    "inputs = make_inputs(images, prompt)\n",
+    "neg_prompt = polish_prompt_en(\"Do not put saint Vitus higher or lower with respect to other statues. Do not put the statue outside the monument. Do not put the statue on the side pillars, nor on the ground.\", images)\n",
+    "inpainted = generate_image(inputs, f\"examples/inpaint_vitus\")\n",
+    "inpainted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53def9dd",
+   "metadata": {},
+   "source": [
+    "### Environment Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12340517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if inpainted is not None:\n",
+    "    inpainted = Image.open(\"examples/inpaint_vitus_0.jpeg\")\n",
+    "if rotated is not None:\n",
+    "    rotated = Image.open(\"example/rotated_0.jpeg\") \n",
+    "\n",
+    "inpainted_roi = inpainted.crop((120, 250, 690, 1000))\n",
+    "inpainted_roi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f993e62e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = [rotated, inpainted_roi]\n",
+    "prompt = polish_prompt_en(\"\"\"\n",
+    "    Put the three saints inside the frontal view of the monument.\n",
+    "    Generate a scene similar to the first image, including the monument and the details in it.\n",
+    "    Keep the image in black and white.\n",
+    "    Be sure to match proportions.\n",
+    "    Be sure to generate consistent face features.\n",
+    "\"\"\", images)\n",
+    "neg_prompt = polish_prompt_en(\"Do not edit the monument. Do not change the statues features or look. Do not remove any of the statues. Do not put statues out of the monument.\", images)\n",
+    "inputs = make_inputs(images, prompt, neg_prompt=neg_prompt)\n",
+    "final = generate_image(inputs, f\"examples/env_refinement\")"
    ]
   },
   {
@@ -445,45 +596,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a62de4e5",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "416863d3",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Further improvements\n",
+    "if final is None:\n",
+    "    final = Image.open(\"examples/env_refinement_0.jpeg\")\n",
     "\n",
-    "These operations aim to edit the previous image in order to have better quality images, but are not strictly necessary.\n",
-    "You can skip these steps if you wish."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27ffb9b2",
-   "metadata": {},
-   "source": [
-    "#### Colorization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0aa1fb96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = Image.open(\"./output_edit.jpeg\").convert(\"RGB\")\n",
-    "prompt = \"Colorize the image.\"\n",
-    "inputs = make_inputs(image, prompt)\n",
-    "output_image = generate_image(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e373298",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_image"
+    "final"
    ]
   }
  ],
