[Em] refactor(image_reconstruction_pipeline): Viene ora fatto uso delle classi di utility;

--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -344,9 +344,7 @@
    "source": [
     "images = [Image.open(\"examples/inpaint_holymary_0.jpeg\")]\n",
     "\n",
-    "# TODO: Inserire il RAG (quindi generazione -> valutazione)\n",
-    "\n",
-    "output_image = imageLLMUtils.generate(\n",
+    "output_image = imageLLMUtils.generate_with_rag(\n",
     "    prompt=\"\"\" Add a statue of saint Eustace to the right of the central niche, using the image of the saint as a reference.\n",
     "               Match the style of the image.\n",
     "               Leave the central niche untouched. Keep face features well defined. Make the image black and white. \"\"\",\n",
@@ -364,19 +362,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = [output_image, Image.open(\"assets/stVitus.jpeg\")]\n",
+    "images = [output_image if output_image is not None else Image.open(\"examples/inpaint_eustace_0.jpeg\")]\n",
     "\n",
-    "# TODO: Inserire il RAG (quindi generazione -> valutazione)\n",
-    "\n",
-    "inpainted =imageLLMUtils(\n",
-    "    prompt=\"\"\" Add a statue of saint Vitus to the left of the central niche, using the image of the saint as a reference. \n",
-    "               Match the image style.\n",
-    "               Be sure to match proportions.\n",
-    "               Leave the central niche untouched.\n",
-    "               Keep face features well defined. Make the image black and white.\"\"\",\n",
+    "inpainted = imageLLMUtils.generate_with_rag(\n",
+    "    prompt=\"\"\" Add a statue of saint Eustace to the right of the central niche, using the image of the saint as a reference.\n",
+    "               Match the style of the image.\n",
+    "               Leave the central niche untouched. Keep face features well defined. Make the image black and white. \"\"\",\n",
     "    images=images,\n",
-    "    neg_prompt=\"Do not put saint Vitus higher or lower with respect to other statues. Do not put the statue outside the monument. Do not put the statue on the side pillars, nor on the ground.\",\n",
-    "    output_filename=\"examples/inpaint_vitus\"\n",
+    "    neg_prompt=\"Do not enlarge nor shrink the niche. Do not edit the background. Do not crop the image. Do not make the statue too big or too small.\",\n",
+    "    output_filename=\"examples/inpaint_eustace\"\n",
     ")\n",
     "inpainted"
    ]
