[Em] refactor(image_reconstruction_pipeline): Pulizia import;

--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -36,10 +36,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import base64\n",
-    "import json\n",
-    "import ollama\n",
-    "import chromadb\n",
     "from utility.vllm_utils import VLLMUtils\n",
     "from utility.imagellm_utils import ImageLLMUtils\n",
     "from utility.vector_store_utils import VectorStoreUtils"
@@ -133,7 +129,7 @@
    "outputs": [],
    "source": [
     "result = chromaUtils.query(\"This is a query document about a saint followed by dogs\")\n",
-    "print(json.loads(result))"
+    "result[0]"
    ]
   },
   {
