[Em] refactor(pipeline_gen_test): vengono ora utilizzate classi di utility;

--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -376,7 +376,15 @@
    "id": "53def9dd",
    "metadata": {},
    "source": [
-    "### Environment Embedding"
+    "### Details Inpainting & Environment Embedding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc4fb474",
+   "metadata": {},
+   "source": [
+    "Again, we are going to take a ROI of the last generated image, in order to get better results over the details inpainting task"
    ]
   },
   {
