--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -101,12 +101,12 @@
    "source": [
     "documents = [\n",
     "    {\n",
-    "        \"caption\":\"A statue of St. Eustace, patron saint of Matera, suited in armor with a golden plume, holding a spear upright in its right hand.\",\n",
+    "        \"caption\":\"St. Eustace, patron saint of Matera, suited in armor with a golden plume, holding a spear upright in its right hand.\",\n",
     "        \"base64\":\"assets/stEustace.jpg\"\n",
     "    },\n",
     "    {\n",
-    "        \"caption\":\"A statue of St. Vitus, suited in light armor and a red cape, bringing a silver cross in is left hand, followed by two dogs of the same breed, of brown and black.\",\n",
-    "        \"base64\":\"assets/stVitus.jpg\"\n",
+    "        \"caption\":\"St. Vitus, wearing a red cape, bringing a silver cross in is left hand, followed by two dogs of the same breed, of brown and black.\",\n",
+    "        \"base64\":\"assets/stVitus.jpeg\"\n",
     "    }\n",
     "]\n",
     "\n",
@@ -128,8 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = chromaUtils.query(\"This is a query document about a saint followed by dogs\")\n",
-    "result[0]"
+    "result = chromaUtils.query([\"This is a query document about a saint followed by dogs\"], n_results=5)\n",
+    "result[0]['img']"
    ]
   },
   {
@@ -245,9 +245,10 @@
    "source": [
     "rotated = imageLLMUtils.generate(\n",
     "    prompt=\"Rotate the main subject, so it looks in front view.\",\n",
-    "    images=[image_full],\n",
+    "    images=[image_roi],\n",
     "    output_filename=\"examples/rotated\"\n",
-    ")"
+    ")\n",
+    "rotated"
    ]
   },
   {
@@ -277,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if rotated is None:\n",
+    "if not('rotated' in vars()) or rotated is None:\n",
     "    rotated = Image.open(\"examples/rotated_0.jpeg\")\n",
     "rotated_roi = rotated.crop((350, 350, 690, 800))\n",
     "rotated_roi"
@@ -300,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_image = imageLLMUtils.generate(\n",
+    "holymary_inpaint = imageLLMUtils.generate(\n",
     "    prompt=\"\"\"Put a little statue of Holy Mary\n",
     "              standing and holding a blessing Baby Jesus, inside the central niche. Be sure to match proportions.\n",
     "              **Be sure to put Holy Mary below the little arc.**\n",
@@ -310,17 +311,8 @@
     "    images=[rotated_roi],\n",
     "    neg_prompt=\"Do not enlarge nor shrink the niche. Scale the size of Holy Mary instead. Do not put Holy Mary below the big arc.\",\n",
     "    output_filename=\"examples/inpaint_holymary\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd900051",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_image"
+    ")\n",
+    "holymary_inpaint"
    ]
   },
   {
@@ -338,17 +330,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = [Image.open(\"examples/inpaint_holymary_0.jpeg\")]\n",
+    "images = [Image.open(\"examples/inpaint_holymary_0.jpeg\") if (not('holymary_inpaint' in vars()) or holymary_inpaint is None) else holymary_inpaint]\n",
     "\n",
-    "output_image = imageLLMUtils.generate_with_rag(\n",
+    "eustace_inpaint = imageLLMUtils.generate_with_rag(\n",
     "    prompt=\"\"\" Add a statue of saint Eustace to the right of the central niche, using the image of the saint as a reference.\n",
     "               Match the style of the image.\n",
     "               Leave the central niche untouched. Keep face features well defined. Make the image black and white. \"\"\",\n",
-    "    images=images,\n",
+    "    images=images + [Image.open(\"assets/stEustace.jpg\")],\n",
+    "    concepts=[\"A statue of Saint Eustace\"],\n",
+    "    vectorStore=chromaUtils,\n",
     "    neg_prompt=\"Do not enlarge nor shrink the niche. Do not edit the background. Do not crop the image. Do not make the statue too big or too small.\",\n",
     "    output_filename=\"examples/inpaint_eustace\"\n",
     ")\n",
-    "output_image"
+    "eustace_inpaint"
    ]
   },
   {
@@ -358,15 +352,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = [output_image if output_image is not None else Image.open(\"examples/inpaint_eustace_0.jpeg\")]\n",
+    "images = [Image.open(\"examples/inpaint_eustace_0.jpeg\") if not('eustace_inpaint' in vars()) or eustace_inpaint is None else eustace_inpaint]\n",
     "\n",
     "inpainted = imageLLMUtils.generate_with_rag(\n",
-    "    prompt=\"\"\" Add a statue of saint Eustace to the right of the central niche, using the image of the saint as a reference.\n",
-    "               Match the style of the image.\n",
-    "               Leave the central niche untouched. Keep face features well defined. Make the image black and white. \"\"\",\n",
+    "    prompt=\"\"\" Add a statue of saint Vitus to the left of the central niche, using the image of the saint as a reference. \n",
+    "       Match the image style.\n",
+    "       Be sure to match proportions.\n",
+    "       Leave the central niche untouched.\n",
+    "       Keep face features well defined. Make the image black and white. \"\"\",\n",
     "    images=images,\n",
-    "    neg_prompt=\"Do not enlarge nor shrink the niche. Do not edit the background. Do not crop the image. Do not make the statue too big or too small.\",\n",
-    "    output_filename=\"examples/inpaint_eustace\"\n",
+    "    concepts=[\"A statue of saint Vitus\"],\n",
+    "    neg_prompt=\"Do not put saint Vitus higher or lower with respect to other statues. Do not put the statue outside the monument. Do not put the statue on the side pillars, nor on the ground.\",\n",
+    "    output_filename=\"examples/inpaint_vitus\"\n",
     ")\n",
     "inpainted"
    ]
@@ -394,9 +391,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if inpainted is not None:\n",
+    "if not('inpainted'in vars()) or inpainted is not None:\n",
     "    inpainted = Image.open(\"examples/inpaint_vitus_0.jpeg\")\n",
-    "if rotated is not None:\n",
+    "if not('rotated'in vars()) or rotated is not None:\n",
     "    rotated = Image.open(\"example/rotated_0.jpeg\") \n",
     "\n",
     "inpainted_roi = inpainted.crop((120, 250, 690, 1000))\n",
@@ -422,7 +419,8 @@
     "    images = images,\n",
     "    neg_prompt=\"Do not edit the monument. Do not change the statues features or look. Do not remove any of the statues. Do not put statues out of the monument.\",\n",
     "    output_filename=\"examples/env_refinement\"\n",
-    ")"
+    ")\n",
+    "final"
    ]
   },
   {
@@ -440,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if final is None:\n",
+    "if not('final'in vars()) or final is None:\n",
     "    final = Image.open(\"examples/env_refinement_0.jpeg\")\n",
     "final"
    ]
@@ -448,7 +446,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "eustachian_monument",
    "language": "python",
    "name": "python3"
   },
@@ -462,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
