[Em, St, Sa] perf: pulite celle di setup inutili, ora coperte dallo script di installazione

--- a/image_reconstruction_pipeline.ipynb
+++ b/image_reconstruction_pipeline.ipynb
@@ -22,16 +22,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "557f7c98",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -r requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9fadd053",
    "metadata": {},
    "outputs": [],
@@ -148,34 +138,6 @@
    "metadata": {},
    "source": [
     "### Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac8ace62",
-   "metadata": {},
-   "source": [
-    "Cloning from public [Qwen Huggingface repo](https://huggingface.co/Qwen/Qwen-Image-Edit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "847a4fe6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git clone https://github.com/QwenLM/Qwen-Image.git ./models/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a059862c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install git+https://github.com/huggingface/diffusers"
    ]
   },
   {
@@ -446,7 +408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "eustachian_monument",
+   "display_name": "eustachian_monument_test",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
